--- a/htdocs/styles/service/service.css
+++ b/htdocs/styles/service/service.css
@@ -38,7 +38,7 @@
   width: 90%;
   height: auto;
   padding: 30px;
-  background-color: #024b9d;
+  background-color: #02359d;
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
