--- a/htdocs/styles/wrapper/wrapper.css
+++ b/htdocs/styles/wrapper/wrapper.css
@@ -1,5 +1,8 @@
 .wrapper {
   max-width: 1880px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 0;
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
 }
