--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -6,7 +6,7 @@
   padding: 0 20px;
   padding-top: 65px;
   padding-bottom: 15px;
-  background-color: rgba($color-blue, 0.9);
+  //background-color: rgba($color-blue, 0.9);
   box-shadow: 0px -10px 18px 0px rgba(40, 61, 77, 0.4);
   position: absolute;
   z-index: 30;
