--- a/htdocs/styles/service/service.css
+++ b/htdocs/styles/service/service.css
@@ -21,6 +21,10 @@
   transition: 1s ease;
 }
 
+.service__item--inner {
+  margin-right: auto;
+}
+
 .service__front {
   width: 100%;
   position: relative;
@@ -48,7 +52,6 @@
   width: 90%;
   height: auto;
   padding: 30px;
-  background-color: #02359d;
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
